[project]
name = "navsuite"
version = "0.1.0"
description = "rye workspace for "
authors = [
    { name = "Tanner Koza", email = "kozatanner@gmail.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
virtual = true
dev-dependencies = [
    "pre-commit>=3.8.0",
    "pytest>=8.3.2",
    "mypy>=1.11.1",
    "pytest-cov>=5.0.0",
    "pip>=24.2",
]

[tool.rye.workspace]
members = ["src/navtools", "src/navsim"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/navtools","src/navsim"]

[[tool.mypy.overrides]]
module = "numba"
ignore_missing_imports = true
