[project]
name = "navtools"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Tanner Koza", email = "kozatanner@gmail.com" }
]
dependencies = [
    "numba>=0.60.0",
    "requests>=2.32.3",
    "unlzw3>=0.2.2",
]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/navtools"]
